BekreftOmsorgOppdaterer